Atualizacao de Repositorio

--- a/css/bootstrap/css/bootstrap.css
+++ b/css/bootstrap/css/bootstrap.css
@@ -3795,7 +3795,7 @@ textarea.form-control-lg {
   font-size: var(--bs-nav-link-font-size);
   font-weight: var(--bs-nav-link-font-weight);
   /*color: var(--bs-nav-link-color);*/
-  color: rgb(0, 0, 0);
+  color: #000;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
