--- a/css/style.css
+++ b/css/style.css
@@ -2,40 +2,11 @@ body, html{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.hr {
-    width: 100%;
-    height: 2px;
-    background-color: #fff;
-    margin-bottom: 2rem;
-    margin-top: 2rem;
-}
-
 header{
 }
 
+/*SECCION*/
 section{
-}
-
-main{
-}
-
-footer{
-    background-color: black;
-    padding-top: 30px;
-    padding-bottom: 30px;
-}
-
-footer p{
-    color: white;
-}
-
-footer img{
-    margin: auto;
-    margin-top: 30px
-}
-
-.footer-logo {
-text-align: center;
 }
 
 .linha1{
@@ -77,3 +48,36 @@ text-align: center;
     color: rgb(255, 255, 255);
     background-color: rgb(0, 0, 0, 0.5);
 }
+
+main{
+}
+
+
+
+/*FOOTER*/
+footer{
+    background-color: black;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+footer p{
+    color: white;
+}
+
+footer img{
+    margin-top: 30px
+}
+
+.footer-logo {
+text-align: center;
+}
+
+.hr {
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+}
+
